Assignment 1/assignment1/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from d:\Works\HK5\PPL\Assignment 1\assignment1\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Var'", "'Function'", "'Parameter'", 
                     "'Return'", "'Body'", "'EndBody'", "'If'", "'Then'", 
                     "'Else'", "'ElseIf'", "'EndIf'", "'For'", "'EndFor'", 
                     "'While'", "'EndWhile'", "'Break'", "'Continue'", "'Do'", 
                     "'EndDo'", "'True'", "'False'", "'+'", "'-'", "'*'", 
                     "'\\'", "'%'", "'+.'", "'-.'", "'*.'", "'\\.'", "'!'", 
                     "'&&'", "'||'", "'='", "'=='", "'!='", "'=/='", "'<'", 
                     "'>'", "'<='", "'>='", "'<.'", "'>.'", "'<=.'", "'>=.'", 
                     "','", "'.'", "':'", "';'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "ID", "VAR", "FUNCTION", "PARAMETER", 
                      "RETURN", "BODY", "END_BODY", "IF", "THEN", "ELSE", 
                      "ELSE_IF", "END_IF", "FOR", "END_FOR", "WHILE", "END_WHITE", 
                      "BREAK", "CONTINUTE", "DO", "END_DO", "TRUE", "FALSE", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "ADD_FLOAT", "SUB_FLOAT", 
                      "MUL_FLOAT", "DIV_FLOAT", "NOT", "AND", "OR", "ASSIGN", 
                      "EQUAL", "NOT_EQUAL", "NOT_EQUAL_FLOAT", "LESS_THAN", 
                      "MORE_THAN", "LESS_THAN_EQUAL", "MORE_THAN_EQUAL", 
                      "LESS_THAN_FLOAT", "MORE_THAN_FLOAT", "LESS_THAN_EQUAL_FLOAT", 
                      "MORE_THAN_EQUAL_FLOAT", "COMMA", "DOT", "COLON", 
                      "SEMI", "LPAREN", "RPAREN", "LSQUARE", "RSQUARE", 
                      "LCURLY", "RCURLY", "INT_LIT", "FLOAT_LIT", "BOOLEAN_LIT", 
                      "STRING_LIT", "ARRAY_LIT", "LITERAL", "COMMENT", "WS", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_global_var_declare = 1
    RULE_var_list = 2
    RULE_var_def = 3
    RULE_variable = 4
    RULE_scalar_var = 5
    RULE_composite_var = 6
    RULE_init_value = 7
    RULE_literal = 8
    RULE_function_declare = 9
    RULE_parameter_list = 10
    RULE_parameter = 11
    RULE_statement_list = 12
    RULE_local_var_declare = 13
    RULE_assignment_statement = 14
    RULE_if_statement = 15
    RULE_for_statement = 16
    RULE_initExpr = 17
    RULE_conditionExpr = 18
    RULE_updateExpr = 19
    RULE_while_statement = 20
    RULE_do_while_statement = 21
    RULE_break_statement = 22
    RULE_continue_statement = 23
    RULE_call_statement = 24
    RULE_return_statement = 25
    RULE_expression = 26
    RULE_exp1 = 27
    RULE_exp2 = 28
    RULE_exp3 = 29
    RULE_exp4 = 30
    RULE_exp5 = 31
    RULE_exp6 = 32
    RULE_exp7 = 33
    RULE_exp8 = 34
    RULE_operand = 35
    RULE_adding = 36
    RULE_multiplying = 37
    RULE_relational_operator = 38
    RULE_sign = 39
    RULE_index_operator = 40
    RULE_function_call = 41
    RULE_argument_list = 42

    ruleNames =  [ "program", "global_var_declare", "var_list", "var_def", 
                   "variable", "scalar_var", "composite_var", "init_value", 
                   "literal", "function_declare", "parameter_list", "parameter", 
                   "statement_list", "local_var_declare", "assignment_statement", 
                   "if_statement", "for_statement", "initExpr", "conditionExpr", 
                   "updateExpr", "while_statement", "do_while_statement", 
                   "break_statement", "continue_statement", "call_statement", 
                   "return_statement", "expression", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "exp8", "operand", "adding", 
                   "multiplying", "relational_operator", "sign", "index_operator", 
                   "function_call", "argument_list" ]

    EOF = Token.EOF
    ID=1
    VAR=2
    FUNCTION=3
    PARAMETER=4
    RETURN=5
    BODY=6
    END_BODY=7
    IF=8
    THEN=9
    ELSE=10
    ELSE_IF=11
    END_IF=12
    FOR=13
    END_FOR=14
    WHILE=15
    END_WHITE=16
    BREAK=17
    CONTINUTE=18
    DO=19
    END_DO=20
    TRUE=21
    FALSE=22
    ADD=23
    SUB=24
    MUL=25
    DIV=26
    MOD=27
    ADD_FLOAT=28
    SUB_FLOAT=29
    MUL_FLOAT=30
    DIV_FLOAT=31
    NOT=32
    AND=33
    OR=34
    ASSIGN=35
    EQUAL=36
    NOT_EQUAL=37
    NOT_EQUAL_FLOAT=38
    LESS_THAN=39
    MORE_THAN=40
    LESS_THAN_EQUAL=41
    MORE_THAN_EQUAL=42
    LESS_THAN_FLOAT=43
    MORE_THAN_FLOAT=44
    LESS_THAN_EQUAL_FLOAT=45
    MORE_THAN_EQUAL_FLOAT=46
    COMMA=47
    DOT=48
    COLON=49
    SEMI=50
    LPAREN=51
    RPAREN=52
    LSQUARE=53
    RSQUARE=54
    LCURLY=55
    RCURLY=56
    INT_LIT=57
    FLOAT_LIT=58
    BOOLEAN_LIT=59
    STRING_LIT=60
    ARRAY_LIT=61
    LITERAL=62
    COMMENT=63
    WS=64
    ERROR_CHAR=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67
    UNTERMINATED_COMMENT=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def global_var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Global_var_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Global_var_declareContext,i)


        def function_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Function_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Function_declareContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR or _la==BKITParser.FUNCTION:
                self.state = 88
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.VAR]:
                    self.state = 86
                    self.global_var_declare()
                    pass
                elif token in [BKITParser.FUNCTION]:
                    self.state = 87
                    self.function_declare()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_list(self):
            return self.getTypedRuleContext(BKITParser.Var_listContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_global_var_declare




    def global_var_declare(self):

        localctx = BKITParser.Global_var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_global_var_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(BKITParser.VAR)
            self.state = 96
            self.match(BKITParser.COLON)
            self.state = 97
            self.var_list()
            self.state = 98
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_defContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_defContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_list




    def var_list(self):

        localctx = BKITParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.var_def()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 101
                self.match(BKITParser.COMMA)
                self.state = 102
                self.var_def()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(BKITParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def init_value(self):
            return self.getTypedRuleContext(BKITParser.Init_valueContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_def




    def var_def(self):

        localctx = BKITParser.Var_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.variable()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 109
                self.match(BKITParser.ASSIGN)
                self.state = 110
                self.init_value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar_var(self):
            return self.getTypedRuleContext(BKITParser.Scalar_varContext,0)


        def composite_var(self):
            return self.getTypedRuleContext(BKITParser.Composite_varContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable




    def variable(self):

        localctx = BKITParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 113
                self.scalar_var()
                pass

            elif la_ == 2:
                self.state = 114
                self.composite_var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Scalar_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_scalar_var




    def scalar_var(self):

        localctx = BKITParser.Scalar_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_scalar_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Composite_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSQUARE(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSQUARE)
            else:
                return self.getToken(BKITParser.LSQUARE, i)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_LIT)
            else:
                return self.getToken(BKITParser.INT_LIT, i)

        def RSQUARE(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSQUARE)
            else:
                return self.getToken(BKITParser.RSQUARE, i)

        def getRuleIndex(self):
            return BKITParser.RULE_composite_var




    def composite_var(self):

        localctx = BKITParser.Composite_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_composite_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(BKITParser.ID)
            self.state = 123 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 120
                self.match(BKITParser.LSQUARE)
                self.state = 121
                self.match(BKITParser.INT_LIT)
                self.state = 122
                self.match(BKITParser.RSQUARE)
                self.state = 125 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.LSQUARE):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def scalar_var(self):
            return self.getTypedRuleContext(BKITParser.Scalar_varContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_init_value




    def init_value(self):

        localctx = BKITParser.Init_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_init_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INT_LIT, BKITParser.FLOAT_LIT, BKITParser.BOOLEAN_LIT, BKITParser.STRING_LIT, BKITParser.ARRAY_LIT]:
                self.state = 127
                self.literal()
                pass
            elif token in [BKITParser.ID]:
                self.state = 128
                self.scalar_var()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(BKITParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(BKITParser.FLOAT_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(BKITParser.STRING_LIT, 0)

        def BOOLEAN_LIT(self):
            return self.getToken(BKITParser.BOOLEAN_LIT, 0)

        def ARRAY_LIT(self):
            return self.getToken(BKITParser.ARRAY_LIT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_literal




    def literal(self):

        localctx = BKITParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.INT_LIT) | (1 << BKITParser.FLOAT_LIT) | (1 << BKITParser.BOOLEAN_LIT) | (1 << BKITParser.STRING_LIT) | (1 << BKITParser.ARRAY_LIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def statement_list(self):
            return self.getTypedRuleContext(BKITParser.Statement_listContext,0)


        def END_BODY(self):
            return self.getToken(BKITParser.END_BODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(BKITParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_function_declare




    def function_declare(self):

        localctx = BKITParser.Function_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(BKITParser.FUNCTION)
            self.state = 134
            self.match(BKITParser.COLON)
            self.state = 135
            self.match(BKITParser.ID)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 136
                self.match(BKITParser.PARAMETER)
                self.state = 137
                self.match(BKITParser.COLON)
                self.state = 138
                self.parameter_list()


            self.state = 141
            self.match(BKITParser.BODY)
            self.state = 142
            self.match(BKITParser.COLON)
            self.state = 143
            self.statement_list()
            self.state = 144
            self.match(BKITParser.END_BODY)
            self.state = 145
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ParameterContext)
            else:
                return self.getTypedRuleContext(BKITParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_parameter_list




    def parameter_list(self):

        localctx = BKITParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.parameter()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 148
                self.match(BKITParser.COMMA)
                self.state = 149
                self.parameter()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(BKITParser.VariableContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_parameter




    def parameter(self):

        localctx = BKITParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.variable()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def local_var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Local_var_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Local_var_declareContext,i)


        def assignment_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Assignment_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.Assignment_statementContext,i)


        def if_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.If_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.If_statementContext,i)


        def for_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.For_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.For_statementContext,i)


        def while_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.While_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.While_statementContext,i)


        def do_while_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Do_while_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.Do_while_statementContext,i)


        def break_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Break_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.Break_statementContext,i)


        def continue_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Continue_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.Continue_statementContext,i)


        def call_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Call_statementContext)
            else:
                return self.getTypedRuleContext(BKITParser.Call_statementContext,i)

